Fixed spacing between Project cards

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,7 +100,7 @@ body{
   height: 87vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 50px 1fr;
+  grid-template-rows: 50px 1fr 1fr;
 }
 
 #projects > h1{
